; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-browser.c_TB_up_expr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-browser.c_TB_up_expr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NULL_TREE = common dso_local global i64 0, align 8
@TB_up_ht = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @TB_up_expr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @TB_up_expr(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @NULL_TREE, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i64, i64* @NULL_TREE, align 8
  store i64 %9, i64* %2, align 8
  br label %15

10:                                               ; preds = %1
  %11 = load i32, i32* @TB_up_ht, align 4
  %12 = load i64, i64* %3, align 8
  %13 = call i64 @htab_find(i32 %11, i64 %12)
  store i64 %13, i64* %4, align 8
  %14 = load i64, i64* %4, align 8
  store i64 %14, i64* %2, align 8
  br label %15

15:                                               ; preds = %10, %8
  %16 = load i64, i64* %2, align 8
  ret i64 %16
}

declare dso_local i64 @htab_find(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
